shared/src/commonMain/kotlin/com/example/osmapi/core/common/errors/OsmTooManyRequestsException.kt
package com.example.osmapi.core.common.errors

class OsmTooManyRequestsException:OsmApiException(){

    companion object{
        const val serialVersionUID = 1L
    }
}

